<resources>
    <string name="app_name">My Application</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\’m a button</string>

    <string name="TextView">Login</string>
    <string name="TextView2">Password</string>

    <string name="RadioButton">RadioButton</string>

    <string name="login_button">Login</string>
    <string name="image_button">Image</string>
    <string name="switcher">Enable Something</string>
    <string name="checker">CheckBox</string>

    <string name="dialog_message">Do you want to go back to the previous page?</string>
    <string name="dialog_title">Quit Page</string>
    <string name="ok">Yes</string>
    <string name="cancel">Cancel</string>

    <string name="ChatButton">Start Chat</string>
    <string name="send_button">Send</string>

    <string name="WeatherButton">Weather Forecast</string>
    <string name="CurrentTemperature">Current Temperature</string>
    <string name="MinTemperature">Min Temperature</string>
    <string name="MaxTemperature">Max Temperature</string>

    <string name="title_activity_test_toolbar">TestToolbar</string>
    <string name="start_the_toolbar">Start the ToolBar</string>
    <string name="goBackQuestion">Do you want to go back?</string>
    <string name="SettingDialogTitle">Simple Dialog</string>

</resources>
