<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:rowCount="2"
    android:columnCount="2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.samuel.androidlabs.ListItemsActivity">

    <RadioButton
        android:text="@string/RadioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioButton2"
        android:layout_row="1"
        android:layout_column="0" />
   <CheckBox
       android:text="@string/checker"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:id="@+id/checkBox" />
    <Switch
        android:text="@string/Switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switch1" />
    <ImageButton
        android:text="@string/image_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton"
        android:background="@android:drawable/ic_menu_camera"
        android:contentDescription=""
        tools:ignore="ContentDescription" />
</GridLayout>
